<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="165dp"
        android:layout_height="169dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/str_icon_description"
        android:src="@mipmap/ic_launcher_round">

    </ImageView>

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_username_hint" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/str_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="Login" />

</LinearLayout>
